@@ -20,12 +20,12 @@ import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.inOrder;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.mockStatic;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.when;
 import static org.mockito.Mockito.withSettings;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
@@ -40,6 +40,7 @@ import org.junit.jupiter.params.provider.CsvSource;
 import org.mockito.InOrder;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.MockedStatic;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.openqa.selenium.HasCapabilities;
 import org.openqa.selenium.WebDriver;
@@ -52,6 +53,7 @@ import org.vividus.context.VariableContext;
 import org.vividus.reporter.event.IAttachmentPublisher;
 import org.vividus.selenium.IWebDriverProvider;
 import org.vividus.selenium.logging.BrowserLogLevel;
+import org.vividus.selenium.logging.BrowserLogManager;
 import org.vividus.softassert.ISoftAssert;
 import org.vividus.ui.action.WaitActions;
 import org.vividus.ui.action.WaitResult;
@@ -100,7 +102,7 @@ class JsValidationStepsTests
         testCheckJsErrors(ERROR_MESSAGE,
                 () -> jsValidationSteps.checkJsLogEntriesOnOpenedPageFilteredByRegExp(Set.of(BrowserLogLevel.ERRORS),
                         EXTENSION_PATTERN));
-        verifyTestActions(Map.of(URL, Collections.emptySet()), ERRORS_ASSERTION_DESCRIPTION);
+        verifyTestActions(Map.of(URL, Set.of()), ERRORS_ASSERTION_DESCRIPTION);
     }
 
     @Test
@@ -129,7 +131,7 @@ class JsValidationStepsTests
         jsValidationSteps.setIncludeBrowserExtensionLogEntries(false);
         testCheckJsErrors(EXTENSION + ERROR_MESSAGE,
             () -> jsValidationSteps.checkJsLogEntriesOnOpenedPage(Set.of(BrowserLogLevel.ERRORS)));
-        verifyTestActions(Map.of(URL, Collections.emptySet()), ERRORS_ASSERTION_DESCRIPTION);
+        verifyTestActions(Map.of(URL, Set.of()), ERRORS_ASSERTION_DESCRIPTION);
     }
 
     @ParameterizedTest
@@ -164,11 +166,25 @@ class JsValidationStepsTests
         verifyAttachmentPublisher(Map.of(URL, List.of(infoEntry)), ordered);
     }
 
+    @Test
+    void shouldClearBrowserConsoleLogs()
+    {
+        try (MockedStatic<BrowserLogManager> mockedManager = mockStatic(BrowserLogManager.class))
+        {
+            WebDriver webDriver = mock(WebDriver.class);
+            when(webDriverProvider.get()).thenReturn(webDriver);
+
+            jsValidationSteps.clearBrowserConsoleLogs();
+
+            mockedManager.verify(() -> BrowserLogManager.resetBuffer(webDriver));
+        }
+    }
+
     private Map<String, Collection<LogEntry>> testCheckJsErrors(String logErrorMessage, Runnable action)
     {
         var entry = mockGetLogEntry(logErrorMessage);
         action.run();
-        return Map.of(URL, Collections.singleton(entry));
+        return Map.of(URL, Set.of(entry));
     }
 
     private LogEntry mockGetLogEntry(String logErrorMessage)
